<resources>
    <string name="app_name">AppSensores</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">AVAYA CALA POC DEVELOPERS GROUP</string>
    <string name="nav_header_subtitle">App Sensores</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Ajustes</string>
    <string name="action_rule_settings">Ajuste de End Points</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_acercade">Acerca de</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="fragment_acercade_info">Aplicacion de Sensores \n Avaya 2020</string>

    <!--Fragment titulos-->
    <string name="fragment_detalle_sensorpuck">Sensor Puck:</string>
    <string name="fragment_detalle_Thunderboard">ThunderBoard:</string>
    <string name="fragment_detalle_Telefono">Telefono:</string>

    <!--Strings de Fragment_Home-->
    <string name="fragment_home_elige">Elige un dispositivo:</string>

    <string name="fragment_home_Eliminar">¿Deseas elimiar este dispositivo?</string>
    <string name="fragment_home_Eliminar_si">Si</string>
    <string name="fragment_home_Eliminar_no">No</string>
    <string name="fragment_home_EliminarTelefono">Este Dispositivo no se puede borrar</string>

    <string name="fragment_thunder_noConnection">No se pudo establecer la conexion</string>
    <string name="fragment_thunder_led_info">Presiona para encender/apagar los LEDs</string>
    <string name="fragment_thunder_sw_info">Presiona los push buttons del dispositivo Thunderboard</string>

    <string name="fragment_rules_title">Reglas del dispositivo:</string>
    <string name="fragment_vista_btn_rules">Reglas</string>

    <!--Dialogos-->
    <string name="dialog_agregar_dispositivo_title">AGREGAR DISPOSITIVO</string>
    <string name="dialog_agregar_dispositivo_tipo">Tipo de dispositivo</string>
    <string name="dialog_agregar_dispositivo_nombre">Nombre de dispositivo</string>
    <string name="dialog_agregar_dispositivo_mac">Mac Address</string>
    <string name="dialog_agregar_dispositivo_token">Token</string>
    <string name="dialog_agregar_dispositivo_ok">ACEPTAR</string>
    <string name="dialog_agregar_dispositivo_search"> + </string>
    <string name="dialog_agregar_dispositivo_msg"> Buscando dispositivos, enciende un dispositivo y aparecera en esta lista… </string>
    <string name="dialog_agregar_dispositivo_spnr"> Elige una opcion </string>
    <string name="dialog_agregar_dispositivo_warn1"> El Nombre es requerido </string>
    <string name="dialog_agregar_dispositivo_warn2"> El Mac addres es requerido </string>
    <string name="dialog_agregar_dispositivo_warn3"> El Mac Addres debe tener 17 caracteres </string>
    <string name="dialog_agregar_dispositivo_warn4"> El Token es requerido </string>
    <string name="dialog_agregar_dispositivo_warn5"> Debes elegir un tipo de dispositivo </string>
    <string name="dialog_agregar_dispositivo_warn6"> El Token ya existe en otro dispositivo </string>



    <string name="dialog_settins_title">Ajustes</string>
    <string name="dialog_settins_token">Ingresa el Token del Telefono</string>
    <string name="dialog_settins_tokenbroker">Ingresa el Token del Broker MQTT</string>
    <string name="dialog_settins_intervalo">Intervalo de actualizacion con Tago (min 5seg)</string>
    <string name="dialog_settins_adv_token">El token es ecesario para continuar.</string>
    <string name="dialog_settins_adv_intervalo">El intervalo es requerido y mayor o igual a %d seg.</string>
    <string name="dialog_settins_intervaloRules">Minimo intervalo ente envio de reglas en segundos</string>
    <string name="dialog_wait_title">Informacion</string>
    <string name="dialog_wait_msg">Enviando comandos...</string>
    <string name="dialog_addrule_val1">Ingresa el Valor1</string>
    <string name="dialog_addrule_val2">Ingresa el Valor2</string>
    <string name="dialog_addrule_title">Agregar Regla</string>
    <string name="dialog_addrule_instruccion">Elige un sensor y tipo de regla</string>
    <string name="dialog_addrule_norules">No hay mas sensores disponibles para este dispositivo</string>

    <string name="dialog_scan_devices_title">Elige un Dispositivo</string>
    <string name="dialog_loading_msg_conectando">Conectando con dispositivo.</string>

    <string name="dialog_rule_settings_title">Reglas de End Point</string>
    <string name="dialog_rule_settings_mail">Correo de notificaciones</string>
    <string name="dialog_rule_settings_delete">¿deseas eliminar esta regla?</string>


    <!--encabezado vista dispositivo fragment-->
    <string name="encabezado_fragment_base_dispo_info">Informacion del Dispositivo</string>

    <!--Measures-->
    <string name="measure_temperatura">Temperatura</string>
    <string name="measure_humedad">Humedad Relativa</string>
    <string name="measure_lux">Luz Ambiente</string>
    <string name="measure_uv">Indice UV</string>
    <string name="measure_voltaje">Voltaje</string>
    <string name="measure_hrmrate">Ritmo cardiaco</string>
    <string name="measure_orientation_x">Orientacion X</string>
    <string name="measure_orientation_y">Orientacion Y</string>
    <string name="measure_orientation_z">Orientacion Z</string>
    <string name="measure_aceleration_x">Aceleracion X</string>
    <string name="measure_aceleration_y">Aceleracion Y</string>
    <string name="measure_aceleration_z">Aceleracion Z</string>
    <string name="measure_proximidad">Proximidad</string>
    <string name="measure_lat">Latitud</string>
    <string name="measure_lng">Longitud</string>

    <!--Rule types-->
    <string name="rule_type_greater">Mayor que</string>
    <string name="rule_type_smaller">Menor que</string>
    <string name="rule_type_between">Entre</string>

    <!--EndPointDeafault-->
    <string name="endpoint_type_none">Ninguno</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="param_mail">Correo</string>
    <string name="param_msg">Mensaje</string>
    <string name="dialog_select_param_title">Selecciona Parametro</string>
    <string name="dialog_select_param_ok">Seleccionar</string>
    <string name="dialog_select_param_adv">Debes seleccionar un parametro</string>
    <string name="dialog_select_select">Seleccione</string>
    <string name="dialog_addrule_adv">Los parametros E-Mail y Mensaje son obligatorios.</string>
    <string name="dialog_addrule_addparam">Agragar Parametro</string>
    <string name="dialog_addrule_titleparams">Presiona \"Agregar Mapeo\" para mapear valores adicionales</string>
    <string name="dialog_ruledetails_title">Detalle de la regla</string>
    <string name="dlog_ruledetails_sensortype">Sensor:</string>
    <string name="dlog_ruledetails_ruletype">Tipo de regla:</string>
    <string name="dlog_ruledetails_val1">Valor 1</string>
    <string name="dlog_ruledetails_val2">Valor 2</string>
    <string name="dialog_mapping_title">Mapear parametro</string>
    <string name="dialog_mapping_param">Seleccione Parametro</string>
    <string name="dialog_mapping_value">Seleccione Valor</string>
    <string name="tv_dlog_ruledetails_mapping">Mapeo</string>
    <string name="dialog_endpoint_title">Elige</string>
    <string name="dialog_endpoint_mesage">Elige el tipo de endpoint para la regla.</string>
    <string name="dlog_ruledetails_endpoint">Endpoint</string>
</resources>
