<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="250dp"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#FF0000"
        android:textColor="#FFFFFF"
        android:textSize="16dp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/dialog_agregar_dispositivo_title"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/dialog_agregar_dispositivo_tipo"/>
    <Spinner
        android:id="@+id/spnr_dialog_agregar_dispositivo_tipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/dialog_agregar_dispositivo_nombre"/>
    <EditText
        android:id="@+id/et_dialog_agregar_dispositivo_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/dialog_agregar_dispositivo_mac"/>
    <EditText
        android:id="@+id/et_dialog_agregar_dispositivo_mac"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/dialog_agregar_dispositivo_token"/>
    <EditText
        android:id="@+id/et_dialog_agregar_dispositivo_token"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"/>
    <Button
        android:id="@+id/btn_dialog_agregar_dispositivo_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/dialog_agregar_dispositivo_ok"/>
</LinearLayout>