<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#FF0000"
            android:textColor="#FFFFFF"
            android:textSize="16dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/dialog_addrule_title"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="5dp"
            android:paddingVertical="2dp"
            android:textStyle="bold"
            android:text="@string/dialog_addrule_instruccion"/>
        <Spinner
            android:id="@+id/spnr_dlog_rule_sensortype"
            android:paddingHorizontal="5dp"
            android:paddingVertical="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Spinner
            android:id="@+id/spnr_dlog_rule_ruletype"
            android:paddingHorizontal="5dp"
            android:paddingVertical="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="5dp"
            android:paddingVertical="2dp"
            android:text="@string/dialog_addrule_val1"/>


        <EditText
            android:id="@+id/et_dialog_rule_val1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="15dp"
            android:text="0"
            android:inputType="numberSigned" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="5dp"
            android:paddingVertical="2dp"
            android:text="@string/dialog_addrule_val2"/>


        <EditText
            android:id="@+id/et_dialog_rule_val2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="15dp"
            android:text="0"
            android:inputType="numberSigned" />
        <View
            android:layout_width="match_parent"
            android:background="#000000"
            android:layout_height="1dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="5dp"
            android:paddingVertical="2dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/dialog_addrule_titleparams"/>
        <ListView
            android:id="@+id/lv_dialog_addrule_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="5dp"
            android:paddingVertical="2dp"/>
        <Button
            android:id="@+id/btn_dialog_rule_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="5dp"
            android:textSize="15dp"
            android:text="Add mapping"/>
        <Button
            android:id="@+id/btn_dialog_rule_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="15dp"
            android:textSize="15dp"
            style="@style/Widget.MaterialComponents.Button"
            android:text="@string/dialog_agregar_dispositivo_ok"/>
        </LinearLayout>
</ScrollView>