<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    android:label="@string/fragment_detalle_sensorpuck"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.appsensores.ui.Fragments.home.HomeFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_fragmentDetalleSensorPuck"
            app:destination="@id/fragmentDetalleSensorPuck" />
    </fragment>
    <fragment
        android:id="@+id/nav_acercade"
        android:name="com.example.appsensores.ui.Fragments.acercade.AcercaDeFragment"
        android:label="@string/menu_acercade"
        tools:layout="@layout/fragment_acerca_de" />
    <fragment
        android:id="@+id/fragmentDetalleSensorPuck"
        android:name="com.example.appsensores.ui.Fragments.vista_sensor.FragmentDetalleSensorPuck"
        android:label="@string/fragment_detalle_sensorpuck"
        tools:layout="@layout/fragment_detalle_sensorpuck" >
        <argument
            android:name="idSensor"
            app:argType="integer"
            android:defaultValue="0" />
    </fragment>
    <!--
    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.appsensores.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />
    -->
</navigation>